# the-lens

sender/: install.sh  main.py  platformio.ini
sender/src/: main.cpp
viewer/: Cargo.toml  README.md  config.example.json
viewer/src/: config.rs  debug_display.rs  display.rs  easing.rs  image_sequence.rs  light.rs  main.rs  mqtt_receiver.rs  mqtt_rotator.rs  mqtt_sender.rs  receiver.rs  rotator.rs  surface.rs  viewer.rs  viewier.rs
viewer/src-old/: debug_receiver.rs  light.rs  mqtt_receiver.rs  mqtt_sender.rs  viewer.rs
