[package]
name = "rotation_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27"
image = "0.25"
rumqttc = "0.24"
serialport = "4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[[bin]]
name = "rotation_viewer"
path = "src/main.rs"
