[package]
name = "rotation_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
pixels = "0.17"
image = "0.25"
rumqttc = "0.24"
serialport = "4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.7"

[[bin]]
name = "rotation_viewer"
path = "src/main.rs"
